# sszb-feedback-skill

./: .gitignore  LICENSE  README.md  SKILL.md  TODO_ENDPOINTS.md  pyproject.toml
sszb_feedback/: __init__.py  analyzer.py  cleanup.py  cli.py  config.py  downloader.py  models.py  parser.py  prospectus.py
sszb_feedback/exchanges/: __init__.py  base.py  bse.py  bse_merger.py  bse_refinancing.py  sse.py  sse_merger.py  sse_refinancing.py  szse.py  szse_merger.py  szse_refinancing.py
templates/: report_template.md
